Interim release.  Looking at getting battery voltage measurement on the TBeam working properly.

--- a/TTGO-FSK-Beacon/data/config.html
+++ b/TTGO-FSK-Beacon/data/config.html
@@ -52,21 +52,21 @@
 		</table>
 		
 		<br>
-		<button id="updatefrequency">Store Frequency</button>
+		<button id="updatefrequency">Store Settings</button>
 		<br>
 		<h2>Presets</h2>
 		
 		<!-- table for preset save and recall button -->
 		<table class="presettable">
 			<tr>
-				<td><center><button id="recallA">Recall A</button></center></td>
-				<td><center><button id="recallB">Recall B</button></center></td>
-				<td><center><button id="recallC">Recall C</button></center></td>
+				<td><center><button id="recallA"><br>Recall A<br><br></button></center></td>
+				<td><center><button id="recallB"><br>Recall B<br><br></button></center></td>
+				<td><center><button id="recallC"><br>Recall C<br><br></button></center></td>
 			</tr>
 			<tr>
-				<td><center><button id="storeA">Store A</button></center></td>
-				<td><center><button id="storeB">Store B</button></center></td>
-				<td><center><button id="storeC">Store C</button></center></td>
+				<td><center><button id="storeA"><br>Store A<br><br></button></center></td>
+				<td><center><button id="storeB"><br>Store B<br><br></button></center></td>
+				<td><center><button id="storeC"><br>Store C<br><br></button></center></td>
 			</tr>
 		</table>
 	</center>
